--- a/java scripts. pt 3/random/random.css
+++ b/java scripts. pt 3/random/random.css
@@ -1,47 +1,74 @@
-*{margin:  0;padding: 0;box-sizing: border-box;
- 
-    font-family: "Roboto", sans-serif;}
-  
-  
- 
-    
-  
-  
-.container
-{background: #050505;display: flex;align-items: center;justify-content: center;flex-direction: column;min-width: 100vh;}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: "Roboto", sans-serif;
+}
 
 
- h2{font-style: normal;font-weight: 400;font-size: 32px;
-    
+
+
+
+
+.container {
+    background: #050505;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    min-width: 100vh;
+}
+
+
+h2 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+
     height: 38px;
     color: #FFFFFF;
     text-align: center;
     margin-top: 126px;
-     margin-bottom: 26px;  
-    }
-    
-
-
-.input-min,.input-max{width: 342px;
-    height: 74px;
-    top: 705px;
-    
-    padding-left: 22px;
-    font-weight: 500;font-size: 40px;line-height: 47px;
-    gap: 0px;
-    border-radius: 14px;
-    border: 1px 0px 0px 0px;
-    opacity: 0.7px;
-    background-color: #fffff333;
-color: #FFFFFF;
+    margin-bottom: 26px;
 }
 
-            button{width: 342px;
-                height: 72px;
-                top: 858px;
-                left: 849px;
-                gap: 0px;
-                border-radius: 10px 0px 0px 0px;
-                opacity: 0px;
-                background: #AEC346;
+input {
+    background: #fffff333;
+    border-radius: 14px;
+    height: 74px;
+    width: 342px;
+    padding: 22px;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    opacity: 0.7;
+    color: #FFFFFF;
+}
+
+.input-min {
+    margin-left: 62px;
+
+
+}
+
+button {
+    width: 342px;
+   height: 74px;
+    top: 80px;
+     box-shadow: 0px, 18px, 40px rgba(174, 195, 70, 0.35);
+          color: #FFFFFF;
+    font-weight: 700;
+    border-radius: 14px;
+    border: none;
+    background: #AEC346;
+    
+    font-size: 36px;
+    cursor: pointer;
+
+    button :hover {opacity:0.6 ;}
+   
+    button:active 
+      {  opacity: 0.8;}
+    
 }
