--- a/java scripts. pt 3/random/random.css
+++ b/java scripts. pt 3/random/random.css
@@ -38,7 +38,9 @@ input {
     border-radius: 14px;
     height: 74px;
     width: 342px;
-    padding: 22px;
+    padding: 22px; 
+    margin: 10px;
+    left: 33px;
     font-weight: 500;
     font-size: 40px;
     line-height: 47px;
@@ -55,7 +57,8 @@ input {
 button {
     width: 342px;
    height: 74px;
-    top: 80px;
+    top: 23px;
+    position: relative;
      box-shadow: 0px, 18px, 40px rgba(174, 195, 70, 0.35);
           color: #FFFFFF;
     font-weight: 700;
