--- a/assets/mario/mario.css
+++ b/assets/mario/mario.css
@@ -66,7 +66,7 @@ img {
 
 .img-2 {
   height: 500px;
-  width: 500px;
+  
 }
 
 button {
@@ -113,10 +113,10 @@ video {
 
 }
 
-.mascara {
+.video-mascara {
   width: 100%;
   height: 100%;
-  background: linear-gradient(109deg, rgba(10, 12, 16, 0.99)15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99)85%);
+  background: linear-gradient(109deg, rgba(10, 12, 16, 0.99)15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99)99%);
   position: fixed;
   top: 0;
 }
@@ -131,27 +131,28 @@ video {
 }
 
 .fale-conosco {
-  background: white;
+  background: rgba(235, 230, 230, 0.973);
   display: flex;
   flex-direction: column;
-  
+  z-index: 3;
   padding: 20px;
   border-radius: 10px;
   gap: 20px;
   position: fixed;
   top: 35%;
   left: -322px;
-  
+  text-transform: uppercase;
   transition: left 1s linear;
-  z-index: 4;
+  ;
 }
+.fale-conosco:hover{background: rgb(199, 202, 245);}
 
 
 input {
   height: 40px;
-  border-radius: 3px;
+  border-radius: 4px;
   border: 1px solid gray;
-  padding-left: 3px;
+  padding-left: 6px;
   outline-color: aquamarine;
 }
 
@@ -165,11 +166,12 @@ textarea {
 }
 
 .mascara-form {
-  visibility: hidden;
+visibility:hidden; 
   height: 100vh;
   width: 100vw;
   position: fixed;
   top: 0;
   z-index: 3;
-  background: linear-gradient(109deg, rgba(10, 12, 16, 0.99)15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99)85%);
+  background: rgb(88, 95, 133);
+  background: linear-gradient(68deg, rgb(250, 226, 146) 5%, rgba(17,34,32,0.7259278711484594) 67%);
 }
