--- a/assets/mario/mario.css
+++ b/assets/mario/mario.css
@@ -25,7 +25,7 @@ body {
 .menu a {
   color: white;
   font-size: 15px;
-  cursor: pointer;text-transform: uppercase;
+  cursor: pointer;text-transform: uppercase;text-decoration: none;
 }
 
 
