--- a/java scripts. pt 3/math.js/joken pô/style.css
+++ b/java scripts. pt 3/math.js/joken pô/style.css
@@ -1,24 +1,65 @@
-*{margin : 0;
+*{ margin : 0;
     padding: 0; 
-    box-sizing: border-box;}
+    box-sizing: border-box}
  
 
-body{background: url();}
+body{background: url(https://img.freepik.com/fotos-premium/criacao-de-inteligencia-artificial-ai-por-robos-humanos-e-maos-humanas-estao-tocando-e-se-conectando_154993-1648.jpg?w=2000)
+    ;display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;   
+     background-size: cover;}
+
+
+.container{padding: 22px;
+    border-radius: 10px;
+    background-color: #dd6868cc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+;}
 
 
 
 
+    .buttons{display: flex;
+        gap: 40px;
+        margin: 30px 0;}
+
+
+button{padding: 25px;
+    font-size: 60px;
+    cursor: pointer;
+    border: none;
+    border-radius: 26px;
+
+}
+
+button:hover {opacity: 0.7;
+    transition:
+    opacity 0.5s ease-in-out;}
+
+#rock{background-color:#2ff360cc ;}
+#paper{background-color: #d70ee9cc;}
+#scissors{background-color:#2f32f3cc ;}
+
+
+p  {font-weight: 500;
+    margin-bottom: 10px;
+    }
+
+   .your-score , span {color: #717cdbcc;
+    font-size: 30px;}
+
+   .Machine-score , span {color :#e90e0ecc;
+    font-size: 30px;
+   }
+
+    
 
 
 
-
-
-
-
-
-
-
-
-
+   
 
 
