--- a/css.grid/grid.css
+++ b/css.grid/grid.css
@@ -8,9 +8,9 @@
     width: 100vw;
     height: 100vh;
     background-color: black;display: grid;
-    grid-template-columns: 100px 100px 100px 100px
-
-
+    grid-template-columns: 1fr 1fr 1fr;
+grid-row-start: 2;
+grid-row-end: 4;
 }
 
 .space {
